welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:11: error: not enough arguments for method arraytri: (nums: Array[Int], n: Int)Boolean.
Unspecified value parameter n.
                                           for (i <- 0 to 9) {b = b || arraytri(n)}
                                                                               ^